--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,39 @@
 annotated-types==0.7.0
 anyio==4.8.0
 certifi==2025.1.31
+contourpy==1.3.1
+cycler==0.12.1
 distro==1.9.0
+fonttools==4.55.8
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jiter==0.8.2
+kiwisolver==1.4.8
+matplotlib==3.10.0
+MouseInfo==0.1.3
+numpy==2.2.2
 openai==1.61.0
+packaging==24.2
+pillow==11.1.0
+PyAutoGUI==0.9.54
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyobjc-core==11.0
+pyobjc-framework-Cocoa==11.0
+pyobjc-framework-Quartz==11.0
+pyparsing==3.2.1
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytweening==1.2.0
+rubicon-objc==0.5.0
+six==1.17.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
